# ai-club

./: .editorconfig  .env.example  .env.host.example  .env.server.example  .env.yaade  .env.yaade.example  .gitignore  AGENTS.md  CLAUDE.md  DecryptToken.java  EXECUTION_STREAMING_PLAN.md  FRONTEND.md  README.en.md  README.md  WIKI_MODULE_PLAN.md  WORKITEM_PRD_IMPLEMENTATION_PLAN.md  docker-compose.host.yml  docker-compose.server.yml  docker-compose.yaade.yml  docker-compose.yml  git-ai-club-user-manual.html
code-processing/: .dockerignore  Dockerfile  README.md  pyproject.toml  tmp-review.json
code-processing/ai_agent_code_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code-processing/app/: main.py  mcp_server.py  models.py  settings.py
code-processing/app/api/: __init__.py  lightrag_routes.py  routes.py
code-processing/app/services/: __init__.py  claude_planning_service.py  (+20 more)
code-processing/tests/: test_claude_planning_service.py  test_cli_execution_service.py  test_cloud_coding_sandbox_policy.py  test_codex_execution_service.py  test_document_service.py  test_execution_workspace_cleanup.py  test_gitlab_code_structure_service.py  test_gitlab_spring_api_extract_service.py  test_gitnexus_serve_manager.py  test_hermes_internal_client.py  test_mcp_search_contract.py  test_repo_structuring_service.py  test_repository_scan_cleanup.py  test_repository_scan_directory_promotion.py  test_repository_scan_fix_plan.py  test_repository_scan_package_exec_plan.py  test_repository_scan_semgrep.py  test_review_service.py  test_self_upgrade_patrol_service.py
(+2409 files in other folders)
