[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-code-processing"
version = "0.1.0"
description = "Code processing service for AI agent engineering platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "uvicorn[standard]>=0.30.1"
]

[tool.setuptools]
packages = ["app", "app.api", "app.services"]
