[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-code-processing"
version = "0.1.0"
description = "Code processing service for AI agent engineering platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "markitdown[pdf,docx,pptx,xlsx]>=0.1.1",
  "mcp>=1.0.0",
  "markdown>=3.6",
  "minio>=7.2.7",
  "pillow>=12.0.0",
  "pypdfium2>=5.7.0",
  "pydantic>=2.7.0",
  "semgrep>=1.75.0",
  "uvicorn[standard]>=0.30.1"
]

[tool.setuptools]
packages = ["app", "app.api", "app.services"]

[tool.setuptools.package-data]
app = ["rulesets/*.yml"]
